
ChangeLog
 [ + added, - removed, * changed ]
 + 17May2016 Add wrappers and merger support to instrument open, fopen and the string name of the opened files
 * 13May2016 Add MPI_Finalize to dlsym PMPI hook
 + 12May2016 Add configure option to use dlsym as PMPI hook
 * 12May2016 Fixed table of states colors with missing states
 + 12May2016 Added wrappers to instrument both 32 and 64-bit I/O calls preadv, pwritev, preadv64, pwritev64
 * 11May2016 Remove SVN revision and branch check and creation of SVN-branch and
             SVN-revision files
 * 04May2016 Added the missing case MPI_WIN_CREATE_EV in the Get_State function 
 * 29Apr2016 Added check for POE environments in the launcher of the online_root 
 + 28Apr2016 Added tracing finalization mechanism for the OMPT target devices, started by Extrae at Backend_Finalization using calls to ompt_target_stop_trace.
 + 27Apr2016 Add support for IBM Platform MPI
 * 27Apr2016 Bug fixes in the instrumentation of OMPT target devices
 + 25Apr2016 Added instrumentation for the following IO calls: fread, fwrite, pread, pwrite, readv, writev, preadv, pwritev
 * 21Apr2016 Update m4 macro to look in lib/x86_64-linux-gnu (support Ubuntu)
 * 08Apr2016 Changed the default PAPI counters in LINUX examples to avoid errors with the latest versions of PAPI and PAPI_BR_MSP
 * 07Apr2016 Removed flag -shared from the lib_dyn_mpitracec_la_LDFLAGS and lib_dyn_mpitracef_la_LDFLAGS, which was set to tell libtool just to generate shared libs (no .a's), but this generated .so's with two dependencies to MRNet, one resolved and one unresolved.
 * 07Apr2016 Extrae version 3.3.0 final release
 * 07Apr2016 Added initial support for tracing of OMPT target devices (accelerators, FPGAs, etc)
 * 06Apr2016 Priorize the search for mpicc family of compilers under bin64 before bin
 * 29Mar2016 Fix trace.sh within DynInst examples (CUDA+MPI and MPI)