@@ -1,6 +1,8 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ + 03May2016 Add recording of MPI one-sided operations' size
+ * 23May2016 Rank 0 was exiting if XML file couldn't be opened, leaving the others stalled in a collective
  + 17May2016 Add wrappers and merger support to instrument open, fopen and the string name of the opened files
  * 13May2016 Add MPI_Finalize to dlsym PMPI hook
  + 12May2016 Add configure option to use dlsym as PMPI hook
